--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Websight</title>
   </head>
   <body>
-    <p>This text is test.</p>
+<canvas id='c' width='640' height='640'></canvas>
+    <script>
+var c=document.getElementById('c').getContext('2d')
+c.fillStyle='#000000'
+c.fillRect(0,0,640,640)
+    </script>
   </body>
 </html>
