--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ c.stroke()}
 
 setInterval(function(){
 //Frame
-
+c.fillStyle='#000000'
+c.fillRect(0,0,640,640)
+ball(320,320,8)
 
 },33)
 </script>
