--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ setInterval(function(){
 //Frame
 c.fillStyle='#000000'
 c.fillRect(0,0,640,640)
-ball(320,320,8)
+ball(320,320,8,'#ffffff')
 
 },33)
 </script>
