--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ setInterval(function(){
 //Frame
 c.fillStyle='#000000'
 c.fillRect(0,0,640,640)
-box(320,320,8,'#FFFFFF')
+c.fillStyle='#ffffff'
+c.fillRect(160,160,480,480)
 
 },33)
 </script>
